--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -7,98 +7,9 @@
     android:background="#FFFFFF"
      >
 
-
-    <android.support.v4.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-    <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-   >
-
-    <android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/card_margin">
-
-    <LinearLayout
-    style="@style/Widget.CardContent"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Info"
-    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/cheese_ipsum" />
-
-    </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/card_margin"
-    android:layout_marginLeft="@dimen/card_margin"
-    android:layout_marginRight="@dimen/card_margin">
-
-    <LinearLayout
-    style="@style/Widget.CardContent"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Friends"
-    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/cheese_ipsum" />
-
-    </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/card_margin"
-    android:layout_marginLeft="@dimen/card_margin"
-    android:layout_marginRight="@dimen/card_margin">
-
-    <LinearLayout
-    style="@style/Widget.CardContent"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Related"
-    android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/cheese_ipsum" />
-
-    </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
+        android:background="#8C9BEB"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </RelativeLayout>
